--- a/layouts/partials/beta.html
+++ b/layouts/partials/beta.html
@@ -15,7 +15,7 @@
             Or open the link below on your phone:<br>
             <a href="{{ .link }}" target="_blank">LINK</a>
         </h2>
-	
+	</div>
 </div>
 
 
